--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 9l3 3-3 3m5 0h3"/>
                         </svg>
                     </div>
-                    <h1 class="text-2xl font-bold bg-gradient-to-r from-primary-400 to-primary-500 bg-clip-text text-transparent">
+                    <h1 class="text-2xl font-bold text-white">
                         STL to STEP Converter
                     </h1>
                 </div>
@@ -99,7 +99,7 @@
                         <h2 class="text-2xl font-semibold mb-4 text-gray-200">Loading Conversion Environment</h2>
                         <p class="text-gray-400 mb-2">Initializing Pyodide and loading conversion libraries...</p>
                         <p class="text-sm text-gray-500">This may take up to 30 seconds on first load</p>
-                        <div class="mt-6 bg-gray-800/50 rounded-lg p-4">
+                        <div class="mt-6 p-4">
                             <div class="flex items-center justify-center space-x-2">
                                 <div class="w-2 h-2 bg-primary-500 rounded-full animate-pulse"></div>
                                 <div class="w-2 h-2 bg-primary-500 rounded-full animate-pulse" style="animation-delay: 0.2s"></div>
